all changes done

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -62,8 +62,8 @@
 					</div>
 
 					<div class="site-branding">
-						<h1 class="site-title">Want <span>to know </span>something <span>about us</span>?</h1>
-						<p class="site-description">iGear is a brand of innovative gadgets at an affordable cost to customers <br>looking for technology solutions to their lifestyle needs.</p>
+						<h1 class="site-title">About <span>Us </span></h1>
+						<!-- <p class="site-description">iGear is a brand of innovative gadgets at an affordable cost to customers <br>looking for technology solutions to their lifestyle needs.</p> -->
 					</div><!-- .site-branding -->
 				</div>
 
@@ -227,7 +227,7 @@
 							<span class="ish-col-xs-4 ish-col-sm-1 ish-twitter"><a href="http://www.twitter.com/igearasia" target="_blank"><i class="ish-icon-twitter"></i></a></span>
 						</div>
 						
-						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO. All Rights Reserved.<br><br>
+						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO Ecommerce Pvt L. All Rights Reserved.<br><br>
 							<p style="font-size: small">Designed by: 
 								<!-- <a href="http://www.fireflydesigns.in/" target="_blank" class="ish-underline"> -->
 									Rajesh Saha
