--- a/index-2.html
+++ b/index-2.html
@@ -80,6 +80,11 @@
 		.centerCont {
 			padding: 10px;
 		}
+		.para{
+			font-size: 7px;
+   		    margin-top: -27px;
+   			text-align: justify;
+		}
 </style>
 </head>
 
@@ -118,7 +123,8 @@
 					</div>
 
 					<div class="site-branding">
-						<h1 class="site-title">JustO Launched<br> a <span>New Vertical</span> Corporate <span>Sales-B2C</span></h1>
+						<!-- <h1 class="site-title">JustO Launched<br> a <span>New Vertical</span> Corporate <span>Sales-B2C</span></h1> -->
+						<br/>
 						<p class="site-description">JustO stands for JUST ORDER which means, a Retailer has to just place an order in the app & rest process will be fulfilled within stipulated Turn Around Time without Retailers follow-ups & enjoy the Hassle free experience.</p>
 					</div><!-- .site-branding -->
 					<div class="site-branding">
@@ -127,14 +133,31 @@
 					</div><!-- .site-branding -->
 					<div class="site-branding">
 						<h1 class="site-title">Why<span>Us?</span></h1>
-						<p class="site-description">JustO envisions to be the supplier-next door to the smallest of the Retailer across PAN India, catering across categories in Consumer Durables and Electronics.</p>
+						<p class="site-description">JustO envisions to be the supplier-next door to the smallest of the Retailer across PAN India, empowering them with the best deals , best brands all under one roof without any constraint for Space and Inventory which will enable them to compete with any large format Retailers.</p>
+						<br/><h3>Best Price </h3>
+						<h3>Wide Range of Virtual Inventory </h3>
+						<h3>TAT Time </h3>
+						<h3>Secure Payment Gateways </h3>
+
 					</div><!-- .site-branding -->
 					<div class="site-branding">
-						<h1 class="site-title">Achive<span>ments</span></h1>
-						<p class="site-description">JustO has been able to achieve in its first phase , a breakthrough in building a mobile application  which is fast , lite, dynamic & user friendly. JustO app gives access to the Retailer of his overall business with a single touch hence keeping every Business Transactions very transparent and Hygiene with the help of Technology at its best along with its very passionate and dedicated team.</p>
+						<h1 class="site-title">Miles<span>tones</span></h1>
+						<p class="site-description">
+							1. 500+ Happy Registered Retailers in the period of 6 months
+						</p>
+
+						<p class="site-description">
+							2. Received Promising Start up of the Year -2022 Recognition by IAF 
+						</p>
+						<p class="site-description">
+							3.Expanded to Telangana & Andhra Pradesh within a Year of Operation.
+						</p>
+						<p class="site-description">
+							4. Started Corporate Sales Module Targeting Corporate Sectors.
+						</p>
 					</div><!-- .site-branding -->
 					<div class="site-branding">
-						<h1 class="site-title">Our<span>Investors</span></h1>
+						<h1 class="site-title">Bootstrapped & <span>Technology Partner</span></h1>
 						<p class="site-description">
 							<img src="img/biz.png" alt="Biz" style="border-radius: 13%;">
 							Biztechnosys Infotech Private Ltd
@@ -356,7 +379,7 @@
 				
 
 				<div class="site-branding" style="padding: 10px;">
-					<h1 class="site-title">Founding Board</h1>
+					<h1 class="site-title">BOARD OF DIRECTORS</h1>
 					<!-- <p class="site-description">
 						<img src="img/team/team1.png" alt="Biz" style="border-radius: 13%; width: 180px;">
 					<p>Kalpesh Vaza</p>	
@@ -369,16 +392,28 @@
 				<!-- <h1>Geeksfo</h1> -->
 				<center class="centerCont">
 					<img class="profImg" src="img/team/team1.png" alt="Biz" >
-					<h6>Kalpesh Vaza</h6>
-					<h5 style="margin-top: -25px;">Co-Founder & Advisory Chairman</h5>
+					<h6>Kalpesh Vaza (Co-Founder , Director & Advisory Chairman)</h6>
+					<!-- <h5 style="margin-top: -25px;"></h5> -->
+					<p class="para">A Senior IT professional with expertise in Program and Product development areas across multiple domains. With 18+ Years of Industry experience of which the last 5 years have been in managing large enterprise engagements.
+
+						Managed projects with a team size of 10-500+ members.Managed Peak portfolio of 500+ team members and portfolio revenues in the range of 1.5 million USD to 7 millionUSD.
+						Specialties: Implementation of Sitecore CMS, Sitecore commerce, habitat and helix principal, Sitecore mobile app development, Sitecore integration with third party.
+						</p>
 				</center>
 			</div>
 			<div class="child2">
 				<!-- <h1>rgeeks</h1> -->
 				<center class="centerCont">
 					<img class="profImg" src="img/team/team2.png" alt="Biz" >
-					<h6>Binod Pawar V.Y.</h6>
-					<h5 style="margin-top: -25px;">Co-Founder & CEO</h5>
+					<h6>Binod Pawar V.Y. (Co-Founder, Director  & CEO)</h6>
+					<!-- <h5 style="margin-top: -25px;"></h5> -->
+					<p class="para">
+						A strategic planner who has proven track record to exceed targets through hard work, dedication and a commitment to the task at hand
+Ability to build strong relationships both internally and externally ensuring both customer and business needs are met 
+Effective communicator both written and verbal as demonstrated by successful interaction with customers, suppliers and colleagues whilst building positive relationships and gaining trust.
+Worked with brands like ONIDA, TCL, VIDEOCON GROUP, HAIER & ARZOOO at various levels,
+
+					</p>
 				</center>
 			</div>
 		</div>
@@ -387,16 +422,25 @@
 				<!-- <h1>Geeksfo</h1> -->
 				<center class="centerCont">
 					<img class="profImg" src="img/team/team3.png" alt="Biz" >
-					<h6>Manish Ramanan</h6>
-					<h5 style="margin-top: -25px;">CTO</h5>
+					<h6>Manish Ramanan (CTO)</h6>
+					<!-- <h5 style="margin-top: -25px;">CTO</h5> -->
+					<p class="para">
+						Seasoned Hands-On Entrepreneurial, strategic thinker, and Software Architect with 19 years in successfully designing, building, and completing innovative business and technology solutions with an acute focus on 
+user experience. Exemplary leadership, problem-solving, team building, communication, and project management skills.
+Discernment to learn from experience and mentor others along the way. Accomplished victorious projects for Daimler, JP Morgan Chase, ICICI Bank, TVS Motors, and many other clients.
+
+					</p>
 				</center>
 			</div>
 			<div class="child2">
 				<!-- <h1>rgeeks</h1> -->
 				<center class="centerCont">
-					<img class="profImg" src="img/team/team4.png" alt="Biz" >
-					<h6>Sampad Behera</h6>
-					<h5 style="margin-top: -25px;">Category Head</h5>
+					<img class="profImg" src="img/team/team6.png" alt="Biz">
+					<h6>Pavithra Shetty (Operations Head)</h6>
+					<!-- <h5 style="margin-top: -25px;">Operations Head</h5> -->
+					<p class="para">
+						Having 12+ years’ experience in Various Sectors Like Hospitality & Education industry at Various Levels, Here in JustO will be Heading Operations - Order and Process Management (Justo Mobile App   & CRM) Registrations and activations Management Analysis& Human Resource.
+					</p>
 				</center>
 			</div>
 		</div>
@@ -404,19 +448,65 @@
 			<div class="child1">
 				<!-- <h1>Geeksfo</h1> -->
 				<center class="centerCont">
-					<img class="profImg" src="img/team/team5.png" alt="Biz" >
-					<h6>Kotresh</h6>
-					<h5 style="margin-top: -25px;">CFO</h5>
+					<img class="profImg" src="" alt="Biz" >
+					<h6>PRAMOD (Category & Business Analyst)</h6>
+					<!-- <h5 style="margin-top: -25px;">CFO</h5> -->
+					<p class="para">
+						Having 17+ years’ experience in Electronics & Consumer Durable Industrywith Major Brands Like Onida, TCL, Panasonic & Impex at Various Levels, Here in JustO will be Heading All Categories- Category Management & Vendor Management -Business and Gap Analysis.
+					</p>
 				</center>
 			</div>
 			<div class="child2">
-				<!-- <h1>rgeeks</h1> -->
+				<!-- <h1>Geeksfo</h1> -->
 				<center class="centerCont">
-					<img class="profImg" src="img/team/team6.png" alt="Biz">
-					<h6>Pavithra Shetty</h6>
-					<h5 style="margin-top: -25px;">Operations Head</h5>
+					<img class="profImg" src="" alt="Biz" >
+					<h6>RAVI KELASKAR (CRM)</h6>
+					<!-- <h5 style="margin-top: -25px;">CFO</h5> -->
+					<p class="para">
+						Having 18+ years’ experience in Electronics & Consumer Durable Industrywith Major Brands Like Samsung, Onida&Metro Cash & carryat Various Levels, Here in JustO will be Heading Customer Relationship Management-Customer Communication &Retention-Administration Management&Logistics Management.
+					</p>
 				</center>
 			</div>
+		</div>
+
+		<div class="Parent paddingInt">
+			<div class="child1">
+				<!-- <h1>Geeksfo</h1> -->
+				<center class="centerCont">
+					<img class="profImg" src="" alt="Biz" >
+					<h6>Subbaiah K.B (Sales Head)</h6>
+					<!-- <h5 style="margin-top: -25px;">CFO</h5> -->
+					<p class="para">
+						Having 18+ years’ experience in Electronics & Consumer Durable Industrywith Major Brands Like Samsung, Whirlpool&Onida at Various Levels, Here in JustO will be Heading Sales –Channel Sales Management-Sales Team Management & Business Development.
+					</p>
+				</center>
+			</div>
+			<div class="child2">
+				<!-- <h1>Geeksfo</h1> -->
+				<center class="centerCont">
+					<img class="profImg" src="" alt="Biz" >
+					<h6>Jai Singh (Corporate Sales)</h6>
+					<!-- <h5 style="margin-top: -25px;">CFO</h5> -->
+					<p class="para">
+						Having 18+ years’ experience in Retail Electronics & Consumer Durable Industry with Major Brands Like Thomson, Onida & Haierat Various Retail Stores, Here in JustO will be Heading Sales (B2C) – Corporate Sales-Direct Sales &BTL Activities.
+					</p>
+				</center>
+			</div>
+		</div>
+
+		<div class="Parent paddingInt">
+			<div class="child1">
+				<!-- <h1>Geeksfo</h1> -->
+				<center class="centerCont">
+					<img class="profImg" src="" alt="Biz" >
+					<h6>Sanil C.N. (Priority Retail Stores)</h6>
+					<!-- <h5 style="margin-top: -25px;">CFO</h5> -->
+					<p class="para">
+						Having 6+ years’ experience in Retail Electronics & Consumer Durable Industry with Major Brands Like SKTVC, Shubham Consumer Durables Pvt Ltd  at Various positions  , Here in JustO will be Heading Priority Retail Stores Business , Franchise Network Expansion & Development.
+					</p>
+				</center>
+			</div>
+			
 		</div>
 				</div>
 
@@ -453,7 +543,7 @@
 							<span class="ish-col-xs-4 ish-col-sm-1 ish-twitter"><a href="http://www.twitter.com/igearasia" target="_blank"><i class="ish-icon-twitter"></i></a></span>
 						</div>
 						
-						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO. All Rights Reserved.<br><br>
+						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO Ecommerce Pvt L. All Rights Reserved.<br><br>
 							<p style="font-size: small">Designed by: 
 								<!-- <a href="http://www.fireflydesigns.in/" target="_blank" class="ish-underline"> -->
 									Rajesh Saha
