--- a/Contact.html
+++ b/Contact.html
@@ -267,7 +267,7 @@ Gadgets which cater to multiple options in the same device. Through its products
 							<span class="ish-col-xs-4 ish-col-sm-1 ish-twitter"><a href="http://www.twitter.com/igearasia" target="_blank"><i class="ish-icon-twitter"></i></a></span>
 						</div>
 						
-						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO. All Rights Reserved.<br><br>
+						<div class="site-info ish-legals ish-widget-element">Copyright © 2022 JustO Ecommerce Pvt L. All Rights Reserved.<br><br>
 						<p style="font-size: small">Designed by: 
 							<!-- <a href="http://www.fireflydesigns.in/" target="_blank" class="ish-underline"> -->
 								Rajesh Saha
