--- a/Aboutus.html
+++ b/Aboutus.html
@@ -160,9 +160,11 @@
 								<div class="ish-row ish-bottom-xs">
 									<div class="ish-col-xs-12 ish-col-sm-4 ish-sc-gallery">
 										<p>
-											<a href="img/ABOUT_US_WEBSITE_HOME_SCREEN_IMAGE_02122021-1.jpg" class="ish-lightbox ish-img-scale ">
+											<!-- <a href="img/ABOUT_US_WEBSITE_HOME_SCREEN_IMAGE_02122021-1.jpg" class="ish-lightbox ish-img-scale ">
 												<img src="img/ABOUT_US_WEBSITE_HOME_SCREEN_IMAGE_02122021-1.jpg" alt="Kamlesh Sharma">
-											</a>
+											</a> -->
+
+											<br/><br/>
 										</p>
 									</div>
 									<div class="ish-col-xs-12 ish-col-sm-offset-1 ish-col-sm-7">
