--- a/Contact.html
+++ b/Contact.html
@@ -161,8 +161,8 @@ Gadgets which cater to multiple options in the same device. Through its products
 								<div class="ish-col-xs-12 ish-col-sm-6 ish-contact-info-container ">
 									<div class="ish-contact-info-box">
 										<div class="ish-row">
-											<div class="ish-contact-info-text ish-col-xs-12 ish-col-md-9 ish-txt-align-right ish-txt-color1">
-												<strong>Working hours:</strong> Mon-Sat 9:30 A.M -7:00 P.M
+											<div style="    font-size: 15px;" class="ish-contact-info-text ish-col-xs-12 ish-col-md-9 ish-txt-align-right ish-txt-color1">
+												<strong>Working hours:</strong>Mon-Sat 9:30 A.M -7:00 P.M
 											</div>
 										</div>
 										<div class="ish-row">
