popup size done

--- a/index-2.html
+++ b/index-2.html
@@ -55,6 +55,7 @@
 			bottom: 5%;
 			left: 5%;
 			right: 5%;
+			font-size: 13px;
 			background-color: rgb(100, 11, 11);
 			padding: .5em;
 			min-width: 10rem;
