--- a/index-2.html
+++ b/index-2.html
@@ -92,15 +92,16 @@
 			padding-top: 14px;
 		}
 
-		.child1 {
+
+		.child11 {
 			width: 49%;
 			height: 43vh;
-			background-color: #de426b;
+			background-color: #5d5d5d;
 			text-align: right;
 			color: white;
 		}
 
-		.child2 {
+		.child21 {
 
 			width: 49%;
 			height: 43vh;
@@ -114,11 +115,48 @@
             height: 43vh; */
 		}
 
+		.child31 {
+
+			width: 49%;
+			height: 43vh;
+			background-color: #5d5d5d;
+			text-align: right;
+			color: white;
+			margin-left: 14px;
+
+			/* width: 50%;
+color: #de426b;
+height: 43vh; */
+		}
+
+
+		.child1 {
+			width: 49%;
+			height: 43vh;
+			background-color: #de426b;
+			text-align: right;
+			color: white;
+		}
+
+		.child2 {
+
+			width: 49%;
+			height: 43vh;
+			background-color: #de426b;
+			text-align: right;
+			color: white;
+			margin-left: 14px;
+
+			/* width: 50%;
+            color: #de426b;
+            height: 43vh; */
+		}
+
 		.child3 {
 
 			width: 49%;
 			height: 43vh;
-			background-color: #6b800b;
+			background-color: #de426b;
 			text-align: right;
 			color: white;
 			margin-left: 14px;
@@ -147,6 +185,11 @@ height: 43vh; */
 
 <style>
 	/* Popup container - can be anything you want */
+	.ourmission{
+		height: 127px;
+    margin-top: -164px;
+    margin-left: 56%;
+	}
 	.popup {
 	  position: relative;
 	  display: inline-block;
@@ -251,7 +294,10 @@ height: 43vh; */
 								Time without Retailers follow-ups & enjoy the Hassle free experience.</p>
 						</div><!-- .site-branding -->
 						<div class="site-branding">
-							<h1 class="site-title">Our<span>Mission</span></h1>
+							<h1 class="site-title">Our<span>Mission</span>
+								<img src="img/whyus/whyus4.png" class="ourmission" alt="">
+							
+							</h1>
 							<p class="site-description">We are a team of passionate go –getters on a mission to redefine
 								the way consumer durable businesses operate in our country with the help of technology
 								and the concept of virtual inventory.</p>
@@ -272,7 +318,7 @@ height: 43vh; */
 								<img src="img/whyus/whyus3.png" class="whyusimg"  alt="">
 							</h3>
 							<h3>Secure Payment Gateways 
-								<img src="img/whyus/whyus4.png" class="whyusimg"  alt="">
+								<img src="img/whyus/whyus5.png" class="whyusimg"  alt="">
 							</h3>
 
 						
@@ -304,7 +350,7 @@ height: 43vh; */
 							</p>
 						</div><!-- .site-branding -->
 					</div>
-					<br><br><br>
+					<br><br><br><br><br><br><br>
 					<!-- Menu Container -->
 					<div class="ish-navigation">
 
@@ -567,7 +613,7 @@ height: 43vh; */
 
 
 						<div class="Parent">
-							<div class="child1">
+							<div class="child11">
 								<!-- <h1>Geeksfo</h1> -->
 								<center class="centerCont">
 									<div class="tooltip-wrap">
@@ -581,7 +627,7 @@ height: 43vh; */
 						</p> -->
 
 										<!-- <img src="/some/image/file.jpg" alt="Some Image" /> -->
-										<div class="popup" onclick="myFunction('myPopup')">See More
+										<div class="popup" onclick="myFunction('myPopup')"><button style="color: black;"> View</button> 
 											<span class="popuptext" id="myPopup">
 												A Senior IT professional with expertise in Program and Product development
 											areas across multiple domains. With 18+ Years of Industry experience of
@@ -602,14 +648,14 @@ height: 43vh; */
 									</div>
 								</center>
 							</div>
-							<div class="child2">
+							<div class="child21">
 								<!-- <h1>rgeeks</h1> -->
 								<center class="centerCont">
 									<div class="tooltip-wrap">
 									<img class="profImg" src="img/team/team2.png" alt="Biz">
 									<span>Binod Pawar V.Y. </span>
 									<span >(Co-Founder, Director & CEO)</span>
-									<div class="popup" onclick="myFunction('myPopup1')">See More
+									<div class="popup" onclick="myFunction('myPopup1')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup1">
 											A strategic planner who has proven track record to exceed targets through hard
 										work, dedication and a commitment to the task at hand
@@ -627,14 +673,14 @@ height: 43vh; */
 								</center>
 							</div>
 
-							<div class="child3">
+							<div class="child31">
 								<!-- <h1>rgeeks</h1> -->
 								<center class="centerCont">
 									<div class="tooltip-wrap">
 									<img class="profImg" src="img/team/team3.png" alt="Biz">
 									<span>Manish Ramanan</span>
 									<span>CTO</span>
-									<div class="popup" onclick="myFunction('myPopup2')">See More
+									<div class="popup" onclick="myFunction('myPopup2')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup2">
 											Seasoned Hands-On Entrepreneurial, strategic thinker, and Software Architect
 										with 19 years in successfully designing, building, and completing innovative
@@ -663,7 +709,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team4.png" alt="Biz">
 									<span>Pavithra Shetty</span>
 									<span>Operations</span>
-									<div class="popup" onclick="myFunction('myPopup3')">See More
+									<div class="popup" onclick="myFunction('myPopup3')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup3">
 											Having 12+ years’ experience in Various Sectors Like Hospitality & Education
 										industry at Various Levels, Here in JustO will be Heading Operations - Order and
@@ -681,7 +727,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team5.png" alt="Biz">
 									<span>Promod</span>
 									<span>(Category & Business Analyst)</span>
-									<div class="popup" onclick="myFunction('myPopup4')">See More
+									<div class="popup" onclick="myFunction('myPopup4')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup4">
 											Having 17+ years’ experience in Electronics & Consumer Durable Industrywith
 										Major Brands Like Onida, TCL, Panasonic & Impex at Various Levels, Here in JustO
@@ -699,7 +745,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team6.png" alt="Biz">
 									<span>Ravi Kelaskar</span>
 									<span>CRM</span>
-									<div class="popup" onclick="myFunction('myPopup5')">See More
+									<div class="popup" onclick="myFunction('myPopup5')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup5">
 											Having 18+ years’ experience in Electronics & Consumer Durable Industrywith
 										Major Brands Like Samsung, Onida&Metro Cash & carryat Various Levels, Here in
@@ -723,7 +769,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team7.png" alt="Biz">
 									<span>Subbaiah K.B </span>
 									<span>(Sales)</span>
-									<div class="popup" onclick="myFunction('myPopup6')">See More
+									<div class="popup" onclick="myFunction('myPopup6')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup6">
 											Having 18+ years’ experience in Electronics & Consumer Durable Industrywith
 										Major Brands Like Samsung, Whirlpool&Onida at Various Levels, Here in JustO will
@@ -742,7 +788,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team8.png" alt="Biz">
 									<span>Jai Singh </span>
 									<span>(Corporate Sales)</span>
-									<div class="popup" onclick="myFunction('myPopup7')">See More
+									<div class="popup" onclick="myFunction('myPopup7')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup7">
 											Having 18+ years’ experience in Retail Electronics & Consumer Durable Industry
 										with Major Brands Like Thomson, Onida & Haierat Various Retail Stores, Here in
@@ -762,7 +808,7 @@ height: 43vh; */
 									<img class="profImg" src="img/team/team9.png" alt="Biz">
 									<span>Sanil C.N. </span>
 									<span>(Priority Retail Stores)</span>
-									<div class="popup" onclick="myFunction('myPopup8')">See More
+									<div class="popup" onclick="myFunction('myPopup8')"><button style="color: black;"> View</button> 
 										<span class="popuptext" id="myPopup8">
 											Having 6+ years’ experience in Retail Electronics & Consumer Durable Industry
 										with Major Brands Like SKTVC, Shubham Consumer Durables Pvt Ltd at Various
