--- a/index-2.html
+++ b/index-2.html
@@ -458,7 +458,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color7 test"><a href="Orion.html"
 												class="ish-img-scale" data-sub-html="Orion"><img
-													src="img/Lamp_Orion/thumbnail.png" alt="Orion"></a></div>
+													src="img/product/ar.png" alt="Orion"></a></div>
 									</div>
 								</div>
 
@@ -473,7 +473,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color4 test"><a href="KeyBee%20Limited.html"
 												class="ish-img-scale" data-sub-html="iGear - KeyBee Limited"><img
-													src="img/Home_Keybee%20Limited/thumbnail.png"
+													src="img/product/ref.png"
 													alt="iGear - KeyBee Limited"></a></div>
 									</div>
 								</div>
@@ -489,7 +489,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color9 test"><a href="Cosmic.html"
 												class="ish-img-scale" data-sub-html="Cosmic"><img
-													src="img/Speakers_Cosmic/thumbnail.png" alt="Cosmic"></a></div>
+													src="img/product/tv.png" alt="Cosmic"></a></div>
 									</div>
 								</div>
 
@@ -505,7 +505,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color8 test"><a href="Evoke.html"
 												class="ish-img-scale" data-sub-html="Evoke"><img
-													src="img/Speakers_Evoke/thumbnail.png" alt="Evoke"></a></div>
+													src="img/product/wash.png" alt="Evoke"></a></div>
 									</div>
 								</div>
 
@@ -520,7 +520,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color13 test"><a href="KeyBee%20Pro.html"
 												class="ish-img-scale" data-sub-html="iGear - KeyBee Pro"><img
-													src="img/Home_KeyBee%20Pro/thumbnail.png"
+													src="img/product/audi.png"
 													alt="iGear - KeyBee Pro"></a></div>
 									</div>
 								</div>
@@ -535,7 +535,7 @@ height: 43vh; */
 										</div>
 										<div class="ish-img ish-bg-color8 test"><a href="Limo.html"
 												class="ish-img-scale" data-sub-html="iGear - Limo"><img
-													src="img/Speakers_Limo/thumbnail.png" alt="iGear - Limo"></a></div>
+													src="img/product/micro.png" alt="iGear - Limo"></a></div>
 									</div>
 								</div>
 
